add exemple in endpoint of update album
